--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,64 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Inter", sans-serif;
+}
+#root {
+  background: linear-gradient(
+    180deg,
+    #1b236a -6.4%,
+    #5b419c 29.07%,
+    rgba(50, 148, 227, 0.63) 62.53%,
+    #000721 100%
+  );
+  height: 400vh;
+}
+h1 {
+  color: #fff;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+p {
+  color: #fff;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+
+.fade-in {
+  animation: fade-in 1s ease-in-out forwards;
+}
+.fade-out {
+  animation: fade-out 1s ease-in-out forwards;
+}
+
+@keyframes fade-out {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.scroll-mask {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to top, transparent, black);
+  pointer-events: none; /* Allows content underneath to be interactive */
 }
