--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -6,7 +6,7 @@
   top: 0;
   display: flex;
   gap: 2rem;
-  padding: 10px 10px 0 10%;
+  padding: 3% 10px 0 10%;
   & > p {
     color: rgba(218, 238, 228, 0.73);
     font-size: 24px;
