--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,4 +1,5 @@
 .navbar-container {
+  z-index: 1000;
   background-color: none;
   width: 100%;
   height: 5vh;
@@ -8,7 +9,7 @@
   gap: 2rem;
   padding: 3% 10px 0 10%;
   & > p {
-    color: rgba(218, 238, 228, 0.73);
+    color: rgba(218, 238, 228, 100);
     font-size: 24px;
     font-style: normal;
     font-weight: 600;
