--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,7 @@ h1 {
   line-height: normal;
 }
 h2 {
-  color: #fff;
+  color: #0e1154;
   font-size: 24px;
   font-style: normal;
   font-weight: 600;
@@ -39,7 +39,7 @@ h2 {
 }
 p {
   color: #fff;
-  font-size: 24px;
+  font-size: 22px;
   font-style: normal;
   line-height: normal;
 }
