--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,6 +1,26 @@
-.about-container {
+.about-page {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
   margin: 0 10% 0 10%;
+  width: 80vw;
+  height: 350px;
+}
+.about-container {
+  width: 60%;
 }
 h2 {
   margin-bottom: 1rem;
+}
+.image-container {
+  width: 40%;
+  z-index: 2;
+  border-radius: 50%;
+  overflow: hidden;
+  & img {
+    object-fit: cover;
+    max-width: 100%;
+    max-height: 100%;
+    z-index: 2;
+  }
 }
