--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,8 +1,14 @@
+.about {
+  display: flex;
+  flex-direction: column;
+  gap: 10rem;
+}
 .about-page {
+  margin: 0 10% 0 10%;
   display: flex;
   flex-direction: row;
-  justify-content: center;
-  margin: 0 10% 0 10%;
+  justify-content: space-between;
+  align-items: center;
   width: 80vw;
   height: 350px;
 }
@@ -13,7 +19,8 @@ h2 {
   margin-bottom: 1rem;
 }
 .image-container {
-  width: 40%;
+  height: 100%;
+  aspect-ratio: 1/1;
   z-index: 2;
   border-radius: 50%;
   overflow: hidden;
