--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,18 +1,21 @@
 .navbar-container {
   z-index: 1000;
-  background-color: none;
   width: 100%;
-  height: 5vh;
   position: sticky;
   top: 0;
   display: flex;
   gap: 2rem;
-  padding: 3% 10px 0 10%;
+  padding: 2% 10px 1% 10%;
+  background-color: #0e115463;
   & > p {
-    color: rgba(218, 238, 228, 100);
+    cursor: pointer;
+    color: rgba(218, 238, 228, 70);
     font-size: 24px;
     font-style: normal;
     font-weight: 600;
     line-height: normal;
+  }
+  & > p:hover {
+    color: rgba(218, 238, 228, 100);
   }
 }
