--- a/src/index.css
+++ b/src/index.css
@@ -18,8 +18,8 @@ body::-webkit-scrollbar {
     180deg,
     #1b236a -6.4%,
     #5b419c 29.07%,
-    rgba(50, 148, 227, 0.63) 62.53%,
-    #000721 100%
+    rgb(98 71 133) 62.53%,
+    #813f9b 100%
   );
   height: 400vh;
 }
@@ -42,6 +42,12 @@ p {
   font-size: 22px;
   font-style: normal;
   line-height: normal;
+}
+
+.title {
+  color: rgb(255 140 245);
+  margin: 0 0 1rem 0;
+  /* filter: drop-shadow(0px 3px 8px #0e1154); */
 }
 
 .fade-out {
