--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -5,7 +5,7 @@
   top: 0;
   display: flex;
   gap: 2rem;
-  padding: 2% 10px 1% 10%;
+  padding: 2vh 10px 1vh 10vw;
   background-color: #0e115463;
   & > p {
     cursor: pointer;
