--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,9 @@
   box-sizing: border-box;
   font-family: "Inter", sans-serif;
 }
+html {
+  scroll-timeline: --page-scroll block;
+}
 
 body {
   -ms-overflow-style: none;
