--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -5,3 +5,64 @@
   margin: 0 10% 0 10%;
   gap: 4rem;
 }
+.project-content {
+  display: flex;
+  gap: 2rem;
+  height: 200px;
+  align-items: center;
+  justify-content: space-between;
+}
+.project-container {
+  
+  & > h2 {
+    text-align: center;
+  }
+}
+
+.image-container-blob {
+  background: #90909a4a;
+  height: 200px;
+  width: 200px;
+  border-radius: 30% 50% 20% 40%;
+  animation: transform-image-blob 40s ease-in-out infinite both alternate,
+  opacity: 0.7;
+  z-index: 0;
+}
+
+.image-blob-background {
+  aspect-ratio: 1/1;
+  transform: rotate(-180deg);
+  animation: transform-image-blob 30s ease-in-out infinite both alternate,
+  movement-image-blob 60s ease-in-out infinite both;
+}
+
+
+
+@keyframes transform-image-blob {
+  0%,
+  100% {
+    border-radius: 33% 67% 70% 30% / 30% 30% 70% 70%;
+  }
+  20% {
+    border-radius: 37% 63% 51% 49% / 37% 65% 35% 63%;
+  }
+  40% {
+    border-radius: 36% 64% 64% 36% / 64% 48% 52% 36%;
+  }
+  60% {
+    border-radius: 37% 63% 51% 49% / 30% 30% 70% 70%;
+  }
+  80% {
+    border-radius: 40% 60% 42% 58% / 41% 51% 49% 59%;
+  }
+}
+
+@keyframes movement-image-blob {
+  0%,
+  100% {
+    transform: none;
+  }
+  50% {
+    transform: rotateY(10deg) scale(1.2);
+  }
+}
