--- a/src/index.css
+++ b/src/index.css
@@ -52,6 +52,20 @@ p {
   margin: 0 0 1rem 0;
   /* filter: drop-shadow(0px 3px 8px #0e1154); */
 }
+.warning {
+  position: absolute;
+  text-align: center;
+  margin: 5% 10% 0 10%;
+  background: #dadadaa8;
+  border-radius: 50px;
+  padding: 5px;
+}
+
+@supports (animation-timeline: view()) {
+  .warning:not([data-bug]) {
+    display: none;
+  }
+}
 
 .fade-out {
   view-timeline-name: --fade-out-object;
