--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -2,9 +2,9 @@
   display: flex;
   flex-direction: column;
   gap: 10rem;
+  margin: 0 10% 0 10%;
 }
 .about-page {
-  margin: 0 10% 0 10%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -29,5 +29,32 @@ h2 {
     max-width: 100%;
     max-height: 100%;
     z-index: 2;
+  }
+}
+
+@media (max-width: 600px) {
+  .about {
+    margin: 0 5% 0 5%;
+  }
+  .about-page {
+    flex-direction: column;
+    height: 100%;
+    width: 100%;
+  }
+  .about-container {
+    width: 100%;
+  }
+  .image-container {
+    width: 50%;
+    aspect-ratio: 1/1;
+    z-index: 2;
+    border-radius: 50%;
+    overflow: hidden;
+    & img {
+      object-fit: cover;
+      max-width: 100%;
+      max-height: 100%;
+      z-index: 2;
+    }
   }
 }
