--- a/src/index.css
+++ b/src/index.css
@@ -109,3 +109,20 @@ p {
   animation-timeline: --fade-out-object;
   animation-range: contain 0% contain 100%;
 }
+
+@media (max-width: 600px) {
+  h1 {
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 600;
+  }
+  h2 {
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+  }
+  p {
+    font-size: 16px;
+    font-style: normal;
+  }
+}
