--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -103,9 +103,11 @@
   width: 80%;
   position: absolute;
   bottom: 10%;
-  & > img {
-    width: 50px;
-    height: 50px;
+  height: 50px;
+  > svg {
+    height: 100%;
+    aspect-ratio: 1/1;
+    overflow: visible;
   }
 }
 
