--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -28,21 +28,16 @@
   flex-direction: column;
   justify-content: space-between;
   height: 24px;
-  aspect-ratio: 1/1;
+  width: 27px;
   cursor: pointer;
-  overflow: hidden;
   > div {
     display: block;
     height: 4px;
     width: 100%;
     border-radius: 10px;
     background: #000000;
-  }
-  > input {
-    position: absolute;
-    opacity: 0;
-    width: 24px;
-    aspect-ratio: 1/1;
+    transition: transform 0.5s ease-in-out;
+    transform-origin: center left;
   }
 }
 
@@ -61,5 +56,15 @@
     background-color: #0e115463;
     flex-direction: column;
     align-items: flex-end;
+  }
+
+  .burger-line1.clicked {
+    transform: rotate(45deg);
+  }
+  .burger-line2.clicked {
+    transform: scale(0);
+  }
+  .burger-line3.clicked {
+    transform: rotate(-45deg);
   }
 }
