--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -79,3 +79,11 @@
     transform: rotateY(10deg) scale(1.2);
   }
 }
+
+@media (max-width: 700px) {
+  #projects {
+    & > h1 {
+      margin: 5rem 5% 0 5%;
+    }
+  }
+}
