--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -137,16 +137,21 @@
   }
 }
 
+@supports (animation-timeline: view()) {
+  .blob-container {
+    view-timeline-axis: block;
+    animation: linear fade-blob both;
+    animation-timeline: --page-scroll;
+    animation-range: 45% 55%;
+  }
+}
+
 /* blobs from https://codepen.io/LA_water/pen/rNaYZBb */
 .blob-container {
   width: 100vw;
   position: absolute;
   top: 0;
   overflow: hidden;
-  view-timeline-axis: block;
-  animation: linear fade-blob both;
-  animation-timeline: --page-scroll;
-  animation-range: 45% 55%;
 }
 .blob {
   background: #90909a4a;
