--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -2,7 +2,11 @@
   margin: 0 10% 0 10%;
   padding-bottom: 20rem;
 }
-
+.contact-container {
+  > h1 {
+    padding-bottom: 2rem;
+  }
+}
 .contact-content {
   height: 15rem;
   display: flex;
@@ -12,6 +16,13 @@
 }
 .contact-information {
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  > a {
+    font-size: 22px;
+    color: #fff;
+  }
 }
 
 .contact-form {
@@ -36,10 +47,14 @@
 }
 
 .form-text {
+  color: #fff;
   background-color: transparent;
   border: 3px solid #0e1154;
   border-radius: 2px;
   padding: 0.5rem;
+}
+.form-text::placeholder {
+  color: #fff;
 }
 
 button {
